--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -845,7 +845,7 @@ The concrete syntax (in EBNF) is specified in clause \ref{a:text-syntax}. The XM
 6.5.3(c)& 
 Complete round-trip mappings from the human-readable concrete syntax to the abstract syntax and
 vice versa.	&
-Boith abstract syntax (clause \ref{c:abstract-syntax}) and concrete syntax (clause \ref{a:text-syntax}) use the same non-terminal symbols
+Both abstract syntax (clause \ref{c:abstract-syntax}) and concrete syntax (clause \ref{a:text-syntax}) use the same non-terminal symbols
 in their EBNF grammar; this makes a round-trip mapping between both straight-forward. Moreover, the round-trip mapping has been implemented in form of a parser and a printer as part of the heterogeneous tool set (see \url{http:hets.eu}).
    \\ \hline
 %
@@ -934,14 +934,20 @@ as documents written in some conforming language). See \ref{c:iris}.
 %
 6.6.1 & 
 Submissions may include additional languages  without a standardized model theory.	&
+This is left for future work.
    \\ \hline
 %%
 6.6.2 & 
 Proposals may provide constructs for non-monotonic logics. 	&
+Currently, only monotonic logics are supported.
+However, there DOL provides a circumscription-like non-monotonic
+structuring construct with syntax \syntax{o1 then \%minimize o2},
+see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
    \\ \hline
 %
 6.6.3 & 
 A characterization of the trade-offs among different translations. 	&
+This is left for future work.
    \\ \hline
 %
 \end{longtable}
