made one qualification mandatory in a library

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3042,7 +3042,7 @@ an OMS language that conforms with DOL (\syntax{OMSInConformingLanguage}; \cf \r
 
 Library                  = [ PrefixMap ] , LibraryDefn
                          | OMSInConformingLanguage ;
-LibraryDefn              = 'library' , LibraryName , { LibraryItem } ;
+LibraryDefn              = 'library' , LibraryName , Qualification , { LibraryItem } ;
 OMSInConformingLanguage  = ($<$)language specific($>$) ;
 LibraryItem              = LibImport | OMSDefn | NetworkDefn | MappingDefn | QueryRelatedDefn | Qualification ;
 LibImport                = 'lib-import' , LibraryName ;
@@ -3630,7 +3630,7 @@ disambiguate heterogeneous texts.
 \begin{lstlisting}[language=ebnf,escapeinside={()},morecomment={[l]{\%\%\ }}]
 Library                 = [ PrefixMap ] , LibraryDefn
                          | OMSInConformingLanguage ;
-LibraryDefn             = 'library' , LibraryName , { LibraryItem } ;
+LibraryDefn             = 'library' , LibraryName , Qualification , { LibraryItem } ;
 OMSInConformingLanguage = ($<$) language and serialization specific ($>$) ;
 LibraryItem             = LibImport | OMSDefn | NetworkDefn | MappingDefn 
                           | QueryRelatedDefn | Qualification ;
