participant list modified

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2366,16 +2366,22 @@ The following people contributed directly to the development of this specificati
 	\item Tara Athan, Athan Services 
 	\item Conrad Bock, National Institute of Standards and Technology  
 	\item Mihai Codescu, Otto-von-Guericke University Magdeburg 
+	\item Michael Gruninger, University of Toronto  
+	\item Andreas Hoffmann, Fraunhofer FOKUS 
 	\item Maria Keet, University of Cape Town 
+	\item Elisa Kendall,  Thematix Partners LLC	
+	\item Oliver Kutz, Otto-von-Guericke University Magdeburg  
 	\item Christoph Lange, University of Bonn 
 	\item Terry Longstreth, Independent Consultant 	
-	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg  
 	\item Till Mossakowski, Otto-von-Guericke University Magdeburg  	
-	\item Elisa Kendall,  Thematix Partners LLC
-	\item Michael Gruninger, University of Toronto  
-	\item Oliver Kutz, Otto-von-Guericke University Magdeburg  
+	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg  
+	\item Leo Obrst, MITRE  
 	\end{itemize}
 %	
+
+
+
+
 %For advice and support we thank 	
 %	\begin{itemize}
 %		\item Guadalupe Aguado 
